# prads_fashion_reader

./: .gitignore  Makefile  README.md  pyproject.toml
src/imagetodescribe/: __init__.py  rest_main.py
src/imagetodescribe/pipeline/: fabric_dataset.py  model_runner.py  multimodal_fabric_classifier.py  train_pipeline.py
tests/: test_fabric_loader.py
